--- a/src/less/index.less
+++ b/src/less/index.less
@@ -27,8 +27,8 @@
     order for utilities:
 
     1) utility.less
-    2) utility-responsive.less
-    3) utility-interactive.less
+    2) responsive-utility.less
+    3) interactive-utility.less
 */
 
 @import "utilities/border.less";
@@ -38,6 +38,7 @@
 @import "utilities/fx.less";
 @import "utilities/gradient.less";
 @import "utilities/grid.less";
+@import "utilities/responsive-grid.less";
 @import "utilities/interface.less";
 @import "utilities/jsFallback.less";
 @import "utilities/layout.less";
