--- a/src/less/elements/pickBtn.less
+++ b/src/less/elements/pickBtn.less
@@ -58,7 +58,7 @@
 }
 
 .pickBtn__icon {
-    .mixin-icon-bg(@id: 'icon-011-s', @fillColor: @color-white);
+    .mixin-icon-bg(@id: 'icon-011-s', @fillColor: 'fff');
     display: none;
     height: 2.8rem;
     margin-left: -1rem;
