--- a/src/less/utilities/grid.less
+++ b/src/less/utilities/grid.less
@@ -1,38 +1,9 @@
 /** grid.less */
 
-// grid container,
-// fractions as inline-block element
+// simple float-based grid
+// =======================
 
-.grid-inline {
-
-    box-sizing: border-box !important;
-    font-size: 0 !important;
-
-    [class*="w-1-1"],
-    [class*="w-1-2"],
-    [class*="w-1-3"],
-    [class*="w-1-4"],
-    [class*="w-1-5"],
-    [class*="w-1-6"],
-    [class*="w-2-3"],
-    [class*="w-2-4"],
-    [class*="w-2-5"],
-    [class*="w-2-6"],
-    [class*="w-3-4"],
-    [class*="w-3-5"],
-    [class*="w-3-6"],
-    [class*="w-4-5"],
-    [class*="w-4-6"],
-    [class*="w-5-6"] {
-        display: inline-block !important;
-    }
-
-}
-
-// grid container,
-// fractions as floating elements
-
-.grid-float {
+.floatGrid {
 
     .mixin-clearfix;
     box-sizing: border-box !important;
@@ -41,313 +12,221 @@
         .mixin-clearfix;
     }
 
-    [class*="w-1-1"],
-    [class*="w-1-2"],
-    [class*="w-1-3"],
-    [class*="w-1-4"],
-    [class*="w-1-5"],
-    [class*="w-1-6"],
-    [class*="w-2-3"],
-    [class*="w-2-4"],
-    [class*="w-2-5"],
-    [class*="w-2-6"],
-    [class*="w-3-4"],
-    [class*="w-3-5"],
-    [class*="w-3-6"],
-    [class*="w-4-5"],
-    [class*="w-4-6"],
-    [class*="w-5-6"] {
+    [class*="w-1-"],
+    [class*="w-2-"],
+    [class*="w-3-"],
+    [class*="w-4-"],
+    [class*="w-5-"] {
         float: left !important;
     }
 
 }
 
-// grid container,
-// flex layout
+// more complex flexbox-based grid system
+// ======================================
 
-.grid-flex {
+/*
+    Learn more about flexbox:
+    https://css-tricks.com/snippets/css/a-guide-to-flexbox/
+
+    Learn about known flexbox bugs:
+    https://github.com/philipwalton/flexbugs
+*/
+
+.flexGrid {
 
     display: flex !important;
     flex-wrap: wrap !important;
 
-    [class*="w-1-1"],
-    [class*="w-1-2"],
-    [class*="w-1-3"],
-    [class*="w-1-4"],
-    [class*="w-1-5"],
-    [class*="w-1-6"],
-    [class*="w-2-3"],
-    [class*="w-2-4"],
-    [class*="w-2-5"],
-    [class*="w-2-6"],
-    [class*="w-3-4"],
-    [class*="w-3-5"],
-    [class*="w-3-6"],
-    [class*="w-4-5"],
-    [class*="w-4-6"],
-    [class*="w-5-6"] {
+    [class*="w-1-"],
+    [class*="w-2-"],
+    [class*="w-3-"],
+    [class*="w-4-"],
+    [class*="w-5-"] {
         display: flex !important;
         flex-direction: column !important;
     }
-
-    // flex layout options
-
-    &.flex-wrap                      { flex-wrap: wrap !important; }
-    &.flex-noWrap                    { flex-wrap: nowrap !important; }
-    &.flex-wrapReverse               { flex-wrap: wrap-reverse !important; }
-
-    &.flex-directionRow              { flex-direction: row !important; }
-    &.flex-directionRowReverse       { flex-direction: row-reverse !important; }
-    &.flex-directionColumn           { flex-direction: column !important; }
-    &.flex-directionColumnReverse    { flex-direction: column-reverse !important; }
-
-    &.flex-alignStart { align-items: flex-start !important; }
-
-    &.flex-alignEnd { align-items: flex-end !important; }
-    &.flex-alignEnd {
-        [class*="w-1-1"],
-        [class*="w-1-2"],
-        [class*="w-1-3"],
-        [class*="w-1-4"],
-        [class*="w-1-5"],
-        [class*="w-1-6"],
-        [class*="w-2-3"],
-        [class*="w-2-4"],
-        [class*="w-2-5"],
-        [class*="w-2-6"],
-        [class*="w-3-4"],
-        [class*="w-3-5"],
-        [class*="w-3-6"],
-        [class*="w-4-5"],
-        [class*="w-4-6"],
-        [class*="w-5-6"] {
-            vertical-align: bottom !important;
-        }
-    }
-
-    &.flex-alignCenter { align-items: center !important; }
-    &.flex-alignCenter {
-        [class*="w-1-1"],
-        [class*="w-1-2"],
-        [class*="w-1-3"],
-        [class*="w-1-4"],
-        [class*="w-1-5"],
-        [class*="w-1-6"],
-        [class*="w-2-3"],
-        [class*="w-2-4"],
-        [class*="w-2-5"],
-        [class*="w-2-6"],
-        [class*="w-3-4"],
-        [class*="w-3-5"],
-        [class*="w-3-6"],
-        [class*="w-4-5"],
-        [class*="w-4-6"],
-        [class*="w-5-6"] {
-            vertical-align: middle !important;
-        }
-    }
-
-    &.flex-alignBaseline { align-items: baseline !important; }
-    &.flex-alignBaseline {
-        [class*="w-1-1"],
-        [class*="w-1-2"],
-        [class*="w-1-3"],
-        [class*="w-1-4"],
-        [class*="w-1-5"],
-        [class*="w-1-6"],
-        [class*="w-2-3"],
-        [class*="w-2-4"],
-        [class*="w-2-5"],
-        [class*="w-2-6"],
-        [class*="w-3-4"],
-        [class*="w-3-5"],
-        [class*="w-3-6"],
-        [class*="w-4-5"],
-        [class*="w-4-6"],
-        [class*="w-5-6"] {
-            vertical-align: baseline !important;
-        }
-    }
-
-    &.flex-aligncontentStart { align-content: flex-start !important; }
-
-    &.flex-alignContentEnd { align-content: flex-end !important; }
-    &.flex-alignContentEnd {
-        [class*="w-1-1"],
-        [class*="w-1-2"],
-        [class*="w-1-3"],
-        [class*="w-1-4"],
-        [class*="w-1-5"],
-        [class*="w-1-6"],
-        [class*="w-2-3"],
-        [class*="w-2-4"],
-        [class*="w-2-5"],
-        [class*="w-2-6"],
-        [class*="w-3-4"],
-        [class*="w-3-5"],
-        [class*="w-3-6"],
-        [class*="w-4-5"],
-        [class*="w-4-6"],
-        [class*="w-5-6"] {
-            vertical-align: bottom !important;
-        }
-    }
-
-    &.flex-alignContentCenter        { align-content: center !important; }
-    &.flex-alignContentSpaceBetween  { align-content: space-between !important; }
-    &.flex-alignContentSpaceAround   { align-content: space-around !important; }
-    &.flex-alignSelfStretch          { align-self: stretch !important; }
-    &.flex-alignSelfStart            { align-self: flex-start !important; }
-
-    &.flex-alignSelfEnd {
-      align-self: flex-end !important;
-      vertical-align: bottom !important;
-    }
-
-    &.flex-alignSelfCenter {
-      align-self: center !important;
-      vertical-align: middle !important;
-    }
-
-    &.flex-alignSelfBaseline {
-      align-self: baseline !important;
-      vertical-align: baseline !important;
-    }
-
-    &.flex-justifyStart {
-      text-align: left !important;
-      justify-content: flex-start !important;
-    }
-
-    &.flex-justifyEnd {
-      text-align: right !important;
-      text-align-last: right !important;
-      justify-content: flex-end !important;
-    }
-
-    &.flex-justifyEnd {
-        [class*="w-1-1"],
-        [class*="w-1-2"],
-        [class*="w-1-3"],
-        [class*="w-1-4"],
-        [class*="w-1-5"],
-        [class*="w-1-6"],
-        [class*="w-2-3"],
-        [class*="w-2-4"],
-        [class*="w-2-5"],
-        [class*="w-2-6"],
-        [class*="w-3-4"],
-        [class*="w-3-5"],
-        [class*="w-3-6"],
-        [class*="w-4-5"],
-        [class*="w-4-6"],
-        [class*="w-5-6"] {
-            text-align: left !important;
-            text-align: start !important;
-            text-align: initial !important;
-            -moz-text-align-last: left !important;
-            -moz-text-align-last: start !important;
-            -moz-text-align-last: initial !important;
-            text-align-last: left !important;
-            text-align-last: start !important;
-            text-align-last: initial !important;
-        }
-    }
-
-    &.flex-justifyCenter {
-      text-align: center !important;
-      text-align-last: center !important;
-      justify-content: center !important;
-    }
-
-    &.flex-justifyCenter {
-        [class*="w-1-1"],
-        [class*="w-1-2"],
-        [class*="w-1-3"],
-        [class*="w-1-4"],
-        [class*="w-1-5"],
-        [class*="w-1-6"],
-        [class*="w-2-3"],
-        [class*="w-2-4"],
-        [class*="w-2-5"],
-        [class*="w-2-6"],
-        [class*="w-3-4"],
-        [class*="w-3-5"],
-        [class*="w-3-6"],
-        [class*="w-4-5"],
-        [class*="w-4-6"],
-        [class*="w-5-6"] {
-            text-align: left !important;
-            text-align: start !important;
-            text-align: initial !important;
-            text-align-last: left !important;
-            text-align-last: start !important;
-            text-align-last: initial !important;
-        }
-    }
-
-    &.flex-justifySpaceBetween {
-      text-align: justify !important;
-      text-align-last: justify !important;
-      justify-content: space-between !important;
-    }
-
-    &.flex-justifySpaceBetween {
-        [class*="w-1-1"],
-        [class*="w-1-2"],
-        [class*="w-1-3"],
-        [class*="w-1-4"],
-        [class*="w-1-5"],
-        [class*="w-1-6"],
-        [class*="w-2-3"],
-        [class*="w-2-4"],
-        [class*="w-2-5"],
-        [class*="w-2-6"],
-        [class*="w-3-4"],
-        [class*="w-3-5"],
-        [class*="w-3-6"],
-        [class*="w-4-5"],
-        [class*="w-4-6"],
-        [class*="w-5-6"] {
-            text-align: left !important;
-            text-align: start !important;
-            text-align: initial !important;
-            text-align-last: left !important;
-            text-align-last: start !important;
-            text-align-last: initial !important;
-        }
-    }
-
-    &.flex-justifySpaceAround {
-      text-align: justify !important;
-      text-align-last: justify !important;
-      justify-content: space-around !important;
-    }
-
-    &.flex-justifySpaceAround {
-        [class*="w-1-1"],
-        [class*="w-1-2"],
-        [class*="w-1-3"],
-        [class*="w-1-4"],
-        [class*="w-1-5"],
-        [class*="w-1-6"],
-        [class*="w-2-3"],
-        [class*="w-2-4"],
-        [class*="w-2-5"],
-        [class*="w-2-6"],
-        [class*="w-3-4"],
-        [class*="w-3-5"],
-        [class*="w-3-6"],
-        [class*="w-4-5"],
-        [class*="w-4-6"],
-        [class*="w-5-6"] {
-            text-align: left !important;
-            text-align: start !important;
-            text-align: initial !important;
-            text-align-last: left !important;
-            text-align-last: start !important;
-            text-align-last: initial !important;
-        }
-    }
-
+    
 }
+
+// flex layout
+
+.flex-wrap                   { flex-wrap: wrap !important; }
+.flex-noWrap                 { flex-wrap: nowrap !important; }
+.flex-wrapReverse            { flex-wrap: wrap-reverse !important; }
+                              
+.flex-directionRow           { flex-direction: row !important; }
+.flex-directionRowReverse    { flex-direction: row-reverse !important; }
+.flex-directionColumn        { flex-direction: column !important; }
+.flex-directionColumnReverse { flex-direction: column-reverse !important; }
+
+.flex-alignStart { align-items: flex-start !important; }
+
+.flex-alignEnd { align-items: flex-end !important; }
+.flex-alignEnd {
+    [class*="w-1-"],
+    [class*="w-2-"],
+    [class*="w-3-"],
+    [class*="w-4-"],
+    [class*="w-5-"] {
+        vertical-align: bottom !important;
+    }
+}
+
+.flex-alignCenter { align-items: center !important; }
+.flex-alignCenter {
+    [class*="w-1-"],
+    [class*="w-2-"],
+    [class*="w-3-"],
+    [class*="w-4-"],
+    [class*="w-5-"] {
+        vertical-align: middle !important;
+    }
+}
+
+.flex-alignBaseline { align-items: baseline !important; }
+.flex-alignBaseline {
+    [class*="w-1-"],
+    [class*="w-2-"],
+    [class*="w-3-"],
+    [class*="w-4-"],
+    [class*="w-5-"] {
+        vertical-align: baseline !important;
+    }
+}
+
+.flex-aligncontentStart { align-content: flex-start !important; }
+
+.flex-alignContentEnd { align-content: flex-end !important; }
+.flex-alignContentEnd {
+    [class*="w-1-"],
+    [class*="w-2-"],
+    [class*="w-3-"],
+    [class*="w-4-"],
+    [class*="w-5-"] {
+        vertical-align: bottom !important;
+    }
+}
+
+.flex-alignContentCenter        { align-content: center !important; }
+.flex-alignContentSpaceBetween  { align-content: space-between !important; }
+.flex-alignContentSpaceAround   { align-content: space-around !important; }
+.flex-alignSelfStretch          { align-self: stretch !important; }
+.flex-alignSelfStart            { align-self: flex-start !important; }
+
+.flex-alignSelfEnd {
+  align-self: flex-end !important;
+  vertical-align: bottom !important;
+}
+
+.flex-alignSelfCenter {
+  align-self: center !important;
+  vertical-align: middle !important;
+}
+
+.flex-alignSelfBaseline {
+  align-self: baseline !important;
+  vertical-align: baseline !important;
+}
+
+.flex-justifyStart {
+  text-align: left !important;
+  justify-content: flex-start !important;
+}
+
+.flex-justifyEnd {
+  text-align: right !important;
+  text-align-last: right !important;
+  justify-content: flex-end !important;
+}
+
+.flex-justifyEnd {
+    [class*="w-1-"],
+    [class*="w-2-"],
+    [class*="w-3-"],
+    [class*="w-4-"],
+    [class*="w-5-"] {
+        text-align: left !important;
+        text-align: start !important;
+        text-align: initial !important;
+        text-align-last: left !important;
+        text-align-last: start !important;
+        text-align-last: initial !important;
+    }
+}
+
+.flex-justifyCenter {
+  text-align: center !important;
+  text-align-last: center !important;
+  justify-content: center !important;
+}
+
+.flex-justifyCenter {
+    [class*="w-1-"],
+    [class*="w-2-"],
+    [class*="w-3-"],
+    [class*="w-4-"],
+    [class*="w-5-"] {
+        text-align: left !important;
+        text-align: start !important;
+        text-align: initial !important;
+        text-align-last: left !important;
+        text-align-last: start !important;
+        text-align-last: initial !important;
+    }
+}
+
+.flex-justifySpaceBetween {
+  text-align: justify !important;
+  text-align-last: justify !important;
+  justify-content: space-between !important;
+}
+
+.flex-justifySpaceBetween {
+    [class*="w-1-"],
+    [class*="w-2-"],
+    [class*="w-3-"],
+    [class*="w-4-"],
+    [class*="w-5-"] {
+        text-align: left !important;
+        text-align: start !important;
+        text-align: initial !important;
+        text-align-last: left !important;
+        text-align-last: start !important;
+        text-align-last: initial !important;
+    }
+}
+
+.flex-justifySpaceAround {
+  text-align: justify !important;
+  text-align-last: justify !important;
+  justify-content: space-around !important;
+}
+
+.flex-justifySpaceAround {
+    [class*="w-1-"],
+    [class*="w-2-"],
+    [class*="w-3-"],
+    [class*="w-4-"],
+    [class*="w-5-"] {
+        text-align: left !important;
+        text-align: start !important;
+        text-align: initial !important;
+        text-align-last: left !important;
+        text-align-last: start !important;
+        text-align-last: initial !important;
+    }
+}
+
+// flex order
+
+.flex-1  { order: 1; }
+.flex-2  { order: 2; }
+.flex-3  { order: 3; }
+.flex-4  { order: 4; }
+.flex-5  { order: 5; }
+.flex-6  { order: 6; }
+.flex-7  { order: 7; }
+.flex-8  { order: 8; }
+.flex-9  { order: 9; }
+.flex-10 { order: 10; }
