--- a/src/less/core/debug.less
+++ b/src/less/core/debug.less
@@ -119,7 +119,7 @@ html::before when (@showCenterGuides = true) {
 // =============
 
 // "broadcast" the active mediaquery to JavaScript
-// --> YOI.currentBreakpoint()
+// --> YOI.currentBreakPoint()
 
 body::after when (@broadCastActiveMediaqueryToJs = true) {
 
