--- a/src/less/index.less
+++ b/src/less/index.less
@@ -108,6 +108,7 @@
 @import "elements/ratingInput.less";
 @import "elements/ribbon.less";
 @import "elements/ruler.less";
+@import "elements/scrollProgress.less";
 @import "elements/searchPrompt.less";
 @import "elements/shelf.less";
 @import "elements/slider.less";
