--- a/src/less/yoi.less
+++ b/src/less/yoi.less
@@ -6,11 +6,11 @@
 
 // theme
 
-@import "theme/breakpoints.less";
-@import "theme/colors.less";
-@import "theme/options.less";
-@import "theme/styling.less";
-@import "theme/typography.less";
+@import "config/breakpoints.less";
+@import "config/colors.less";
+@import "config/options.less";
+@import "config/styling.less";
+@import "config/typography.less";
 
 // core
 
