--- a/src/less/utilities/color-interactive.less
+++ b/src/less/utilities/color-interactive.less
@@ -1,4 +1,4 @@
-/** interactive-color.less */
+/** color-interactive.less */
 
 .generate_hvrStyles (@i) when (@i > 0) {
     .generate_hvrStyles((@i - 1));
