--- a/src/less/utilities/typography-interactive.less
+++ b/src/less/utilities/typography-interactive.less
@@ -1,4 +1,4 @@
-/** interactive-typography.less */
+/** typography-interactive.less */
 
 .hvr--tdcr-none:hover { text-decoration: none !important; }
 .hvr--tdcr-undl:hover { text-decoration: underline !important; }
