--- a/src/less/utilities/visibility-base.less
+++ b/src/less/utilities/visibility-base.less
@@ -1,4 +1,4 @@
-/** visibility.less */
+/** visibility-base.less */
 
 .vis-vis { visibility: visible !important; }
 .vis-hid { visibility: hidden !important; }
