--- a/src/less/yoi.less
+++ b/src/less/yoi.less
@@ -14,49 +14,40 @@
 
 // core
 
+@import "core/accessibility.less";
 @import "core/debug.less";
 @import "core/mixins.less";
 @import "core/reset.less";
 @import "core/root.less";
-@import "core/accessibility.less";
 
 // utilities
 
-/*
-    To make sure overrides work properly, stick to the following
-    order for utilities:
-
-    1) utility.less
-    2) responsive-utility.less
-    3) interactive-utility.less
-*/
-
 @import "utilities/border.less";
-@import "utilities/color.less";
-@import "utilities/interactive-color.less";
+@import "utilities/color-base.less";
+@import "utilities/color-interactive.less";
 @import "utilities/cursor.less";
 @import "utilities/fx.less";
 @import "utilities/gradient.less";
-@import "utilities/grid.less";
-@import "utilities/responsive-grid.less";
+@import "utilities/grid-base.less";
+@import "utilities/grid-responsive.less";
 @import "utilities/interface.less";
 @import "utilities/jsFallback.less";
-@import "utilities/layout.less";
-@import "utilities/responsive-layout.less";
-@import "utilities/opacity.less";
-@import "utilities/interactive-opacity.less";
-@import "utilities/shadow.less";
-@import "utilities/interactive-shadow.less";
-@import "utilities/sizing.less";
-@import "utilities/responsive-sizing.less";
-@import "utilities/spacing.less";
-@import "utilities/responsive-spacing.less";
+@import "utilities/layout-base.less";
+@import "utilities/layout-responsive.less";
+@import "utilities/opacity-base.less";
+@import "utilities/opacity-interactive.less";
+@import "utilities/shadow-base.less";
+@import "utilities/shadow-interactive.less";
+@import "utilities/sizing-base.less";
+@import "utilities/sizing-responsive.less";
+@import "utilities/spacing-base.less";
+@import "utilities/spacing-responsive.less";
 @import "utilities/transition.less";
-@import "utilities/typography.less";
-@import "utilities/responsive-typography.less";
-@import "utilities/interactive-typography.less";
-@import "utilities/visibility.less";
-@import "utilities/responsive-visibility.less";
+@import "utilities/typography-base.less";
+@import "utilities/typography-interactive.less";
+@import "utilities/typography-responsive.less";
+@import "utilities/visibility-base.less";
+@import "utilities/visibility-responsive.less";
 
 // components
 
