--- a/src/less/utilities/shadow-interactive.less
+++ b/src/less/utilities/shadow-interactive.less
@@ -1,4 +1,4 @@
-/** interactive-shadow.less */
+/** shadow-interactive.less */
 
 .hvr--sh-1:hover    { .mixin-shadow-1 !important; }
 .hvr--sh-2:hover    { .mixin-shadow-2 !important; }
