--- a/src/components/modal/modal.less
+++ b/src/components/modal/modal.less
@@ -28,7 +28,7 @@
 
 .modal__header {
     border-bottom: @color-main-24 1px solid;
-    border-radius: (@borderRadius * 1px) (@borderRadius * 1px) 0 0;
+    border-radius: (@defaultBorderRadius * 1px) (@defaultBorderRadius * 1px) 0 0;
     margin: 0 0 1rem 0;
     padding: 0 1rem;
 }
