--- a/src/components/note/note.less
+++ b/src/components/note/note.less
@@ -165,7 +165,7 @@
 .notes {
 
     .note:first-child {
-        border-radius: (@borderRadius * 1px) (@borderRadius * 1px) 0 0;
+        border-radius: (@defaultBorderRadius * 1px) (@defaultBorderRadius * 1px) 0 0;
     }
 
     .note + .note {
@@ -174,7 +174,7 @@
     }
 
     .note:last-child {
-        border-radius: 0 0 (@borderRadius * 1px) (@borderRadius * 1px);
+        border-radius: 0 0 (@defaultBorderRadius * 1px) (@defaultBorderRadius * 1px);
     }
 
     .note:only-child {
