--- a/src/components/searchprompt/searchPrompt.less
+++ b/src/components/searchprompt/searchPrompt.less
@@ -54,7 +54,7 @@
     
     .mixin-clearAppearance;
     background: @color-main-23;
-    border-radius: (2px * @borderRadius) 2rem 2rem (2px * @borderRadius) ;
+    border-radius: (2px * @defaultBorderRadius) 2rem 2rem (2px * @defaultBorderRadius) ;
     border: 0;
     color: @color-main-8;
     cursor: pointer;
