--- a/src/components/stepper/stepper.less
+++ b/src/components/stepper/stepper.less
@@ -140,7 +140,7 @@
 }
 
 .stepper__btnMinus {
-    border-radius: 0 0 0 (@borderRadius * 1px);
+    border-radius: 0 0 0 (@defaultBorderRadius * 1px);
     bottom: 0;
 }
 
@@ -149,7 +149,7 @@
 }
 
 .stepper__btnPlus {
-    border-radius: (@borderRadius * 1px) 0 0 0;
+    border-radius: (@defaultBorderRadius * 1px) 0 0 0;
     top: 0;
 }
 
