--- a/src/less/utilities/border.less
+++ b/src/less/utilities/border.less
@@ -31,10 +31,10 @@
 .br-all    { .mixin-defaultBorderRadius !important; }
 .br-circle { border-radius: 50% !important; overflow: hidden !important; }
 
-.br-tl     { border-top-left-radius: 1px * @borderRadius !important; }
-.br-tr     { border-top-right-radius: 1px * @borderRadius !important; }
-.br-br     { border-bottom-right-radius: 1px * @borderRadius !important; }
-.br-bl     { border-bottom-left-radius: 1px * @borderRadius !important; }
+.br-tl     { border-top-left-radius: 1px * @defaultBorderRadius !important; }
+.br-tr     { border-top-right-radius: 1px * @defaultBorderRadius !important; }
+.br-br     { border-bottom-right-radius: 1px * @defaultBorderRadius !important; }
+.br-bl     { border-bottom-left-radius: 1px * @defaultBorderRadius !important; }
 
 .br-0      { border-radius: 0 !important; }
 .br-tl-0   { border-top-left-radius: 0 !important; }
