--- a/src/less/yoi.less
+++ b/src/less/yoi.less
@@ -9,7 +9,6 @@
 @import "config/breakpoints.less";
 @import "config/colors.less";
 @import "config/options.less";
-@import "config/styling.less";
 @import "config/typography.less";
 
 // core
@@ -51,3 +50,7 @@
 
 // components
 
+/**
+ *  Styles for components are added during the build process.
+ *  See package.json
+ */
