--- a/src/components/box/box.less
+++ b/src/components/box/box.less
@@ -27,7 +27,7 @@
     .mixin-clearfix;
 
     .box:first-child {
-        border-radius: (@borderRadius * 1px) (@borderRadius * 1px) 0 0;
+        border-radius: (@defaultBorderRadius * 1px) (@defaultBorderRadius * 1px) 0 0;
         margin: 0;
     }
 
@@ -37,7 +37,7 @@
     }
 
     .box:last-child {
-        border-radius: 0 0 (@borderRadius * 1px) (@borderRadius * 1px);
+        border-radius: 0 0 (@defaultBorderRadius * 1px) (@defaultBorderRadius * 1px);
     }
 
 }
