--- a/src/components/flipbtns/flipBtns.less
+++ b/src/components/flipbtns/flipBtns.less
@@ -48,7 +48,7 @@
 
 .flipBtns__btnPrev {
 
-    border-radius: (@borderRadius * 1px) 0 0 (@borderRadius * 1px);
+    border-radius: (@defaultBorderRadius * 1px) 0 0 (@defaultBorderRadius * 1px);
     border-right: 0;
     left: -3rem;
 
@@ -60,7 +60,7 @@
 
 .flipBtns__btnNext {
 
-    border-radius: 0 (@borderRadius * 1px) (@borderRadius * 1px) 0;
+    border-radius: 0 (@defaultBorderRadius * 1px) (@defaultBorderRadius * 1px) 0;
     border-left: 0;
     right: -3rem;
 
@@ -95,14 +95,14 @@
 
     .flipBtns__btnPrev {
         border: @color-main-23 1px solid;
-        border-radius: 0 (@borderRadius * 1px) (@borderRadius * 1px) 0;
+        border-radius: 0 (@defaultBorderRadius * 1px) (@defaultBorderRadius * 1px) 0;
         border-left: 0;
         left: 0;
     }
 
     .flipBtns__btnNext {
         border: @color-main-23 1px solid;
-        border-radius: (@borderRadius * 1px) 0 0 (@borderRadius * 1px);
+        border-radius: (@defaultBorderRadius * 1px) 0 0 (@defaultBorderRadius * 1px);
         border-right: 0;
         right: 0;
     }
