--- a/src/components/flyout/flyout.less
+++ b/src/components/flyout/flyout.less
@@ -47,14 +47,14 @@
 .flyout--left .flyout__handle {
     transform-origin: right top;
     transform: rotate(270deg);
-    border-radius: (@borderRadius * 1px) 0 0 (@borderRadius * 1px);
+    border-radius: (@defaultBorderRadius * 1px) 0 0 (@defaultBorderRadius * 1px);
     right: 0;
 }
 
 .flyout--right .flyout__handle {
     transform-origin: left top;
     transform: rotate(90deg);
-    border-radius: 0 0 (@borderRadius * 1px) (@borderRadius * 1px);
+    border-radius: 0 0 (@defaultBorderRadius * 1px) (@defaultBorderRadius * 1px);
     left: 0;
 }
 
@@ -87,11 +87,11 @@
     }
 
     .flyout--left {
-        border-radius: 0 (@borderRadius * 1px) (@borderRadius * 1px) 0;
+        border-radius: 0 (@defaultBorderRadius * 1px) (@defaultBorderRadius * 1px) 0;
     }
 
     .flyout--right {
-        border-radius: (@borderRadius * 1px) 0 0 (@borderRadius * 1px);
+        border-radius: (@defaultBorderRadius * 1px) 0 0 (@defaultBorderRadius * 1px);
     }
 
     .flyout--hidden {
