--- a/src/components/mainmenu/mainMenu.less
+++ b/src/components/mainmenu/mainMenu.less
@@ -13,7 +13,7 @@
 
 .mainMenu__menu {
 
-    border-radius: (@borderRadius * 1px) (@borderRadius * 1px) 0 0;
+    border-radius: (@defaultBorderRadius * 1px) (@defaultBorderRadius * 1px) 0 0;
     border: @color-main-23 1px solid;
     border-bottom: 0;
     box-sizing: border-box;
