--- a/src/components/pagerewind/pageRewind.less
+++ b/src/components/pagerewind/pageRewind.less
@@ -7,7 +7,7 @@
 
     .mixin-shadow-3;
     background: @color-main-24;
-    border-radius: (@borderRadius * 1px) (@borderRadius * 1px) 0 0;
+    border-radius: (@defaultBorderRadius * 1px) (@defaultBorderRadius * 1px) 0 0;
     border: @color-main-22 1px solid;
     border-bottom: 0;
     bottom: -.5rem;
