--- a/src/components/popover/popOver.less
+++ b/src/components/popover/popOver.less
@@ -13,7 +13,7 @@
 
 .popOver {
     background: @color-main-25;
-    border-radius: (@borderRadius * 1px);
+    border-radius: (@defaultBorderRadius * 1px);
     border: @color-main-23 1px solid;
 }
 
