--- a/src/components/tabs/tabs.less
+++ b/src/components/tabs/tabs.less
@@ -4,7 +4,7 @@
 // =====
 
 .tabs {
-    border-radius: 1px * @borderRadius;
+    border-radius: 1px * @defaultBorderRadius;
     border: @color-main-23 1px solid;
 }
 
@@ -162,8 +162,8 @@
     .tabs__item.is--active {
         border-left: @color-main-23 1px solid;
         border-right: @color-main-23 1px solid;
-        border-top-left-radius: 1px * @borderRadius;
-        border-top-right-radius: 1px * @borderRadius;
+        border-top-left-radius: 1px * @defaultBorderRadius;
+        border-top-right-radius: 1px * @defaultBorderRadius;
         border-top: @color-main-23 1px solid;
         box-shadow: none;
         color: @color-main-8;
