--- a/src/less/core/accessibility.less
+++ b/src/less/core/accessibility.less
@@ -16,3 +16,45 @@
    To learn more about tabindex behaviour in
    different browsers, see http://www.alexlande.com/articles/cross-browser-tabindex-woes/
 */
+
+// mixins
+// ======
+
+.mixin-defaultBorderRadius() {
+    border-radius: (@defaultBorderRadius * 1px);
+}
+
+.mixin-defaultFocus() {
+    box-shadow: @focusColor 0 0 10px;
+    outline: 0;
+    z-index: 101;
+}
+
+.mixin-tabFocus() {
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+    animation-name: customFocus;
+    animation-timing-function: ease-out;
+    outline-color: @focusColor;
+    outline-offset: 1rem;
+    outline-radius: @defaultBorderRadius * 1px;
+    outline-style: solid;
+    outline-width: 0.2rem;
+}
+
+.mixin-tabFocus-inset() {
+    box-shadow:
+        inset 2px 0 0 @focusColor,
+        inset 0 2px 0 @focusColor,
+        inset -2px 0 @focusColor,
+        inset 0 -2px 0 @focusColor
+    ;
+}
+
+@keyframes customFocus {
+    from {
+        outline-color: @focusColor;
+    } to {
+        outline-color: @color-transparent;
+    }
+}
