--- a/src/less/utilities/shadow-base.less
+++ b/src/less/utilities/shadow-base.less
@@ -1,5 +1,12 @@
 /** shadow-base.less */
 
+// shadow mixins
+
+.mixin-shadow-1 { box-shadow: 0 0 5px  fade(@color-main-15, 50%); }
+.mixin-shadow-2 { box-shadow: 0 0 10px fade(@color-main-15, 50%); }
+.mixin-shadow-3 { box-shadow: 0 0 20px fade(@color-main-15, 50%); }
+.mixin-shadow-4 { box-shadow: 0 0 35px fade(@color-main-15, 50%); }
+
 // box shadows
 
 .sh-0 { box-shadow: 0 !important; }
