--- a/src/less/config/options.less
+++ b/src/less/config/options.less
@@ -3,5 +3,13 @@
 @cdnDomain                     : 'cdn.yoshino.digital';
 @broadCastActiveMediaqueryToJs : true;
 @defaultBorderRadius           : 2;
+@debugMediaquery               : false;
+@debugGrid                     : false;
+@debugBemElements              : false;
+@debugBemModifiers             : false;
+@debugImages                   : false;
+@debugFloats                   : false;
+@showCenterGuides              : false;
+
 // @utilityPrefix                 : '';
 // @componentPrefix               : 'yoi-';
