--- a/src/less/utilities/sizing-responsive.less
+++ b/src/less/utilities/sizing-responsive.less
@@ -44,7 +44,7 @@
         .@{prefix}--w-@{i} { width:  1rem * @i !important; }
         .@{prefix}--h-@{i} { height: 1rem * @i !important; }
     }
-    .generate_width_height(60);
+    .generate_width_height(@responsiveSizingSteps);
 
 }
 
