--- a/src/less/utilities/spacing-responsive.less
+++ b/src/less/utilities/spacing-responsive.less
@@ -55,7 +55,7 @@
         .@{prefix}--ptl-@{i}       { padding-top:    @product !important; padding-left:   @product !important; }
 
     }
-    .generate_margin_padding(10);
+    .generate_margin_padding(@responsiveSpacingSteps);
 
     .@{prefix}--m-0 { margin: 0 !important; }
     .@{prefix}--p-0 { padding: 0 !important; }
